<resources>
    <string name="app_name">DoReMi</string>
    <string name="app_version">2.2.0</string>

    <string name="text_editor">Firafitra</string>
    <string name="tex_title">Lohateny</string>
    <string name="text_author">Tonony</string>
    <string name="text_compositor">Feony</string>
    <string name="text_release_date">Daty</string>
    <string name="text_singer">Mpihira</string>

    <string name="text_signature">Gadona</string>
    <string name="text_key">Do dia</string>
    <string name="text_tempo">Tempo</string>
    <string name="text_swing">Swing</string>
    <string name="instrument">Zava-maneno</string>
    <string name="text_voices_num">Isan\'ny feo:</string>
    <string name="voice_s">S</string>
    <string name="voice_a">A</string>
    <string name="voice_t">T</string>
    <string name="voice_b">B</string>
    <string name="text_loog">Andininy</string>

    <string name="appbar_content_descr">App par button</string>
    <string name="piano_btns_descr">Piano button</string>

    <string name="search">Hikaroka …</string>

    <string name="cd_coord_placeholder">1 : 1</string>
    <string name="text_sign">Marika</string>
    <string name="cd_dal">Fiverenana</string>
    <string name="text_modulation">Do dia</string>
    <string name="text_velocity">Nuance</string>

    <string name="text_download">Eo am-pakana ny solfa</string>
    <string name="text_cancel">Ajanona</string>

    <string name="text_about">Mombamomba</string>
    <string name="text_changelog">Fanovana</string>

    <string name="action_share">Afindra</string>
    <string name="action_publish">Zaraina</string>
    <string name="action_delete">Fafana</string>

    <string name="text_name">Anarana</string>
    <string name="text_code">Kaody</string>
    <string name="text_uploading">Manaparitaka …</string>
    <string name="text_upload_done">Voazara soa aman-tsara</string>
    <string name="text_retry">Averina</string>
    <string name="text_done">Vita</string>
    <string name="text_lyrics">Tononkira</string>

    <string name="net_error">Misy olana ny aterineto, avereno afaka foroana fohy.</string>

    <string name="login_tips">Alefaso amin\'ny pejy facebook \"Mitombo amin\'ny finoana\" ny hoe \"doremi\"
        raha mbola tsy manana kaonty ianao.
    </string>


    <string name="text_slogan">
        Andriamanitra o, hihira fihiram-baovao ho Anao aho,
        amin\'ny valiha tory folo no hankalazako Anao.
    </string>
    <string name="text_psalm">Salamo 144 : 9</string>
    <string name="help_greeting">Finaritra e!</string>
    <string name="text_description">
        Fiadanana!
        \n\nIty application dia zaraina maimaim-poana.
        \nMandefasa hafatra mivantana ao amin\'ny Facebook raha manana fanontaniana ianao.
        \nMiala tsiny mialoha raha elaela vao mamaly na tsy mahavaly noho ny antony samihafa.
        \n\nManentana anao hitsidika ny tranonkala Fitiavana voalohany https://fitiavana.org izay
        ahitanao fampianarana baiboly mifantoka amin\'ny fitiavan\'Andriamanitra sy ny fahasoavany.
        \n\nNy fahasoavana sy ny fiadanan\'i Jesosy Kristy ho aminao.
    </string>
    <string name="text_contact">
        Facebook: Ravo Maniry\n https://www.facebook.com/ravomaniry
    </string>
    <string name="text_website">Tranonkala: https://fitiavana.org</string>
    <string name="text_website_value">https://fitiavana.org</string>

    <string name="help_buttons">1. Ireo bokotra samihafa</string>
    <string name="help_open_menu">
        Manokatra ny \"menu\" ahafahana manova ny firafitry ny hira sy ny zava-maneno
    </string>
    <string name="help_play">Mandefa ny feon-kira</string>
    <string name="hep_stop">Manajanona ny feon-kira</string>
    <string name="help_save">Mitahiry ny hira na ny fanovana natao taminy</string>
    <string name="help_show_keyboard">Mampiseho ny \"clavier\"</string>
    <string name="help_hide_keyboard">Manafina ny \"clavier\"</string>
    <string name="help_back">Mamerina ny fanovana natao t@ solfa</string>
    <string name="help_new">Hanomboka hira vaovao</string>
    <string name="help_explore">Manokatra ny lisitry ny solfa ao amin\'ny findainao</string>
    <string name="help_print">Mitahiry ny solfa ho .html sy excel. Afaka ovaina na sokafana amin\'ny solosaina</string>
    <string name="help_midi">Mitahiry ny feon-kira ho .mid afaka sokafana amin\'ny application hafa</string>
    <string name="help_copy">"Copier": misafidy ireo naoty hadika</string>
    <string name="help_paste">Coller / mandika ny naoty natao "Copie"</string>

    <string name="help_menu">2. Ny \"Menu\"</string>

    <string name="help_structure">2.1. Structure</string>
    <string name="help_structure_details">
        - Fanovana ny firafitry ny hira (tempo, clé …)
        \n- Ahafahana mitsonga ny feo tiana hoenoina
    </string>

    <string name="help_titre">2.2. Titre</string>
    <string name="help_titre_details">
        Fanovana ny mombamomba ny hira (lohateny, mpamorona …)
    </string>

    <string name="help_open">2.3. Explorer</string>
    <string name="help_open_details">
        - Ahitana ny lisitry ny solfa rehetra
        \n- Ahafahana manokatra, mizara ary mafafa solfa
    </string>

    <string name="help_keyboard">3. NY \"Clavier\"</string>

    <string name="help_octave_left">Mampidina octave</string>

    <string name="help_octave_right">Mampiakatra octave</string>

    <string name="help_delete_note">Mamafa naoty</string>
    <string name="help_keyboard_other">
        Ireo bokotra hafa dia mifanaraka amin\'izay hita ao anaty solfa ihany.
    </string>

    <string name="help_copy_paste_title">4. Mandika naoty - Copier/Coller</string>
    <string name="help_copy_paste_1">
        1. Tsindrio ny toerana misy ny naoty voalohany tiana ho adika
    </string>
    <string name="help_copy_paste_2">
        2. Tsindrio ny bokotra "Copier"
    </string>
    <string name="help_copy_paste_3">
        3. Tsindrio ny toerana misy ny naoty farany tiana ho adika
    </string>
    <string name="help_copy_paste_4">
        4. Tsindrio fanindroany ny bokotra "Copier"
    </string>
    <string name="help_copy_paste_5">
        5. Tsindrio ny toerana tiana handikana ny naoty
    </string>
    <string name="help_copy_paste_6">6. Tsindina ny bokotra "Coller"</string>
    <string name="help_dc_ds_title">
        5. FIVERENANA
    </string>
    <string name="help_dc_ds_star">
        Misy kintana eo amin\'ilay fasiana DC raha ao amin\'ny mesure misy anao
    </string>
    <string name="help_dc">
        Da Capo na DC:
        \n- Tsindrio eo ambonin\'ny feo voalohany amin\'ny barre farany amin\'ilay mesure tiana hiverenana
        \n- Safidio ny menu: Fiverenana > DC
        \n  (*) Ny barre farany ihany no azo asiana DC
    </string>

    <string name="help_ds">
        Dal Segno na D$:
        \n a. Apetraka aloha ny \"signe\" $
        \n   - Tsindrio eo ambonin\'ny feo voalohany amin\'ilay tiana hasiana $
        \n   - Safidio ny menu: Marika > \"$\" na \"S2\" na izay isa miseho ao
        \n b. Apetraka ny D$:
        \n   - Tsindriana eo ambonin\'ny feo voalohany asiana ny D$
        \n   - Safidio ny Fiverenana > D$ na D$2 na izay isa tianao hiverenana
        \n (*) Tsy maintsy barre mifameno amin\'ilay misy $ ny DS: raha barre voalohany ny $ dia barre farany ny D$
    </string>

    <string name="help_solfa">6. Ny solfa</string>
    <string name="help_solfa_1">
        1. Raha tianao hanomboka amin\'ny \"mesure\" iray ny feon-kira dis tsindrio
        manadrify ny \":\" na ny \"|\". Miova loko ilay \"mesure\" avy eo.
    </string>
    <string name="help_solfa_2">
        2. Sokafy ny "menu" raha te:
        \n\t- hanova zava-maneno (timbre)
        \n\t- hihaino feo iray na maromaro mitokana
    </string>
    <string name="help_solfa_3">
        3. Tsindrio ny faritra eo ambonin\'ny feo voalohany raha hanampy:
        \n\t- fiovana \"Tempo\"
        \n\t- fiovana \"Clé\"
        \n\t- \"nuance\"
    </string>
</resources>
